Fixing fullscreen map z-index

--- a/grakon/static/css/style.css
+++ b/grakon/static/css/style.css
@@ -165,6 +165,10 @@ select {
     margin: 0;
 }
 
+div#publicElectionsMap {
+	z-index: 2;
+}
+
 .olPopupCloseBox, .olPopupContent {
 	opacity: 1;
 	filter: alpha(opacity=100);
